--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -75,7 +75,8 @@
         "title": "Záleží nám na tvém úsměvu",
         "secondary_title": "Zubní klinika v Kolíně",
         "services_btn": "Zobrazit služby",
-        "view_more_btn": "Zobrazit více",
+        "services_search_placeholder": "Jakou službu hledáte?",
+        "services_no_result_pop_up": "Nebyly nalezeny žádné služby, zkuste vyhledat jinou službu!",
         "faq": "Často kladené otázky",
         "question_1": "Otázka",
         "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
