--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -31,7 +31,8 @@
         "title": "We care for your smile",
         "secondary_title": "Dental clinic in Kolin",
         "services_btn": "View services",
-        "view_more_btn": "View more",
+        "services_search_placeholder": "What service are you looking for?",
+        "services_no_result_pop_up": "No services have been found, try searching for another service!",
         "faq": "FAQ",
         "question_1": "Question",
         "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
