--- a/src/translations/ua/translation.json
+++ b/src/translations/ua/translation.json
@@ -31,7 +31,8 @@
         "title": "Ми дбаємо про вашу усмішку",
         "secondary_title": "Зубна клініка в місті Колін",
         "services_btn": "Наші сервіси",
-        "view_more_btn": "Більше сервісів",
+        "services_search_placeholder": "Яку послугу ви шукаєте?",
+        "services_no_result_pop_up": "Послуг не знайдено, спробуйте пошукати іншу послугу!",
         "faq": "Питання та відповіді",
         "question_1": "Питання",
         "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
