--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -7,6 +7,8 @@
     "services_title": "Služby",
     "contacts_title": "Kontakty",
     "appointment_title": "Rezervujte si termín",
+    "faq_title": "Často kladené otázky",
+    "coming_soon": "Již brzy",
 
     "service_1": "Stomatologie",
     "service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
@@ -38,38 +40,6 @@
     "service_desc_14": "Zářivý úsměv je na dosah – vybělení zubů bezpečně a efektivně.",
     "service_15": "Zubní laboratoř",
     "service_desc_15": "V naší vlastní laboratoři se postaráme o rychlou a kvalitní výrobu protetiky.",
-    "service_16": "Estetická stomatologie",
-    "service_desc_16": "Úsměv podle vašich představ – krásný, přirozený a sebevědomý.",
-    "service_17": "Estetická medicína",
-    "service_desc_17": "Omlazující procedury pro krásu a mladistvý vzhled, ve kterém se budete cítit skvěle.",
-    "service_18": "Gummy smile a bruxismus",
-    "service_desc_18": "Najdeme řešení pro nadměrné odhalování dásní i skřípání zubů.",
-    "service_19": "Omlazení a výplně rtů",
-    "service_desc_19": "Zvýrazníme krásu vašich rtů pro plný a svěží vzhled.",
-    "service_20": "Vyhlazení vrásek v obličeji",
-    "service_desc_20": "Pomůžeme vám dosáhnout přirozeně hladké a svěží pleti.",
-    "service_21": "Vstupní prohlídka",
-    "service_desc_21": "První krok ke zdravému úsměvu",
-    "service_22": "Dentální hygiena pro děti",
-    "service_desc_22": "První krok ke zdravému úsměvu.",
-    "service_23": "Hloubkové čištění zubů",
-    "service_desc_23": "První krok ke zdravému úsměvu.",
-    "service_24": "Ošetření zubního kazu",
-    "service_desc_24": "Pro zdravý a bezbolestný úsměv.",
-    "service_25": "Gummy smile",
-    "service_desc_25": "Řešení pro harmonický úsměv.",
-    "service_26": "Bruxismus",
-    "service_desc_26": "Řešení pro nepříjemné skřípání zubů.",
-    "service_27": "Keramické fazety",
-    "service_desc_27": "Cesta k dokonalému úsměvu.",
-    "service_28": "Zubní korunky",
-    "service_desc_28": "Obnova funkce a estetiky vašich zubů.",
-    "service_29": "Zubní můstky",
-    "service_desc_29": "Spolehlivé řešení pro náhradu chybějících zubů.",
-    "service_30": "Částečné a celkové snímatelné náhrady",
-    "service_desc_30": "Pohodlné řešení pro obnovení vašeho úsměvu.",
-    "service_31": "Kloubní poradna",
-    "service_desc_31": "Řešení obtíží s čelistním kloubem.",
 
     "home": {
         "title": "Záleží nám na tvém úsměvu",
@@ -77,7 +47,6 @@
         "services_btn": "Zobrazit služby",
         "services_search_placeholder": "Jakou službu hledáte?",
         "services_no_result_pop_up": "Nebyly nalezeny žádné služby, zkuste vyhledat jinou službu!",
-        "faq": "Často kladené otázky",
         "question_1": "Otázka",
         "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
         "question_2": "Otázka",
