--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -7,25 +7,39 @@
     "services_title": "Services",
     "contacts_title": "Contacts",
     "appointment_title": "Book an appointment",
+    "faq_title": "FAQ",
+    "coming_soon": "Coming soon",
 
-    "service_1": "Stomatology",
-    "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_2": "Endodontics",
-    "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_3": "Prevention",
-    "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_4": "Dental hygiene",
-    "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_5": "Implantology",
-    "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_6": "Periodontology",
-    "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_7": "Pediatric dentistry",
-    "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_8": "Dental Surgery",
-    "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_9": "Orthodontics",
-    "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_1": "Stomatologie",
+    "service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
+    "service_2": "Prevence",
+    "service_desc_2": "Pravidelné kontroly, díky kterým udržíme váš chrup v perfektní kondici.",
+    "service_3": "Dentální hygiena",
+    "service_desc_3": "Profesionální čištění zubů, které vám pomůže předejít kazům a zánětům.",
+    "service_4": "Stomatochirurgie",
+    "service_desc_4": "Šetrné chirurgické zákroky, které zvládnete bez obav a bolesti.",
+    "service_5": "Kompletní rekonstrukce chrupu",
+    "service_desc_5": "Navrátíme vašemu úsměvu plnou funkci i krásu.",
+    "service_6": "Extrakce zubů moudrosti",
+    "service_desc_6": "Zbavíme vás problémových zubů moudrosti rychle a bezpečně.",
+    "service_7": "Implantologie",
+    "service_desc_7": "Chybějící zuby? Nabízíme moderní a spolehlivé řešení pomocí implantátů.",
+    "service_8": "Parodontologie",
+    "service_desc_8": "Pomůžeme vám s léčbou zánětů dásní a podpoříme zdraví vašeho parodontu.",
+    "service_9": "Endodoncie",
+    "service_desc_9": "Zachraňujeme zuby před extrakcí pečlivým ošetřením kořenových kanálků.",
+    "service_10": "Ortodoncie",
+    "service_desc_10": "Společně dosáhneme rovných zubů pomocí moderních ortodontických metod.",
+    "service_11": "Analgosedace a celková anestezie",
+    "service_desc_11": "Ošetření zcela bez bolesti pro váš maximální komfort.",
+    "service_12": "Dětská stomatologie",
+    "service_desc_12": "Šetrná péče o dětské zoubky s důrazem na prevenci a pozitivní přístup.",
+    "service_13": "Nastřižení uzdiček v ústech kojenců",
+    "service_desc_13": "Rychlý a šetrný zákrok pro pohodlnější kojení a správnou pohyblivost jazyka.",
+    "service_14": "Bělení zubů",
+    "service_desc_14": "Zářivý úsměv je na dosah – vybělení zubů bezpečně a efektivně.",
+    "service_15": "Zubní laboratoř",
+    "service_desc_15": "V naší vlastní laboratoři se postaráme o rychlou a kvalitní výrobu protetiky.",
 
     "home": {
         "title": "We care for your smile",
@@ -33,7 +47,6 @@
         "services_btn": "View services",
         "services_search_placeholder": "What service are you looking for?",
         "services_no_result_pop_up": "No services have been found, try searching for another service!",
-        "faq": "FAQ",
         "question_1": "Question",
         "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
         "question_2": "Question",
