--- a/src/assets/translations/uk/translation.json
+++ b/src/assets/translations/uk/translation.json
@@ -1,104 +1,105 @@
 {
-    "home_title": "Головна",
-    "about_us_title": "Про нас",
-    "our_team_title": "Наша команда",
-    "price_list_title": "Прайс лист",
-    "smile_gallery_title": "Галерея усмішок",
-    "services_title": "Сервіси",
-    "contacts_title": "Контакти",
-    "appointment_title": "Записатись на прийом",
-    "faq_title": "Питання та відповіді",
-    "coming_soon": "Незабаром",
+	"home_title": "Головна",
+	"about_us_title": "Про нас",
+	"our_team_title": "Наша команда",
+	"price_list_title": "Прайс лист",
+	"smile_gallery_title": "Галерея усмішок",
+	"services_title": "Сервіси",
+	"contacts_title": "Контакти",
+	"appointment_title": "Записатись на прийом",
+	"faq_title": "Питання та відповіді",
+	"coming_soon": "Незабаром",
 
-    "service_1": "Stomatologie",
-    "service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
-    "service_2": "Prevence",
-    "service_desc_2": "Pravidelné kontroly, díky kterým udržíme váš chrup v perfektní kondici.",
-    "service_3": "Dentální hygiena",
-    "service_desc_3": "Profesionální čištění zubů, které vám pomůže předejít kazům a zánětům.",
-    "service_4": "Stomatochirurgie",
-    "service_desc_4": "Šetrné chirurgické zákroky, které zvládnete bez obav a bolesti.",
-    "service_5": "Kompletní rekonstrukce chrupu",
-    "service_desc_5": "Navrátíme vašemu úsměvu plnou funkci i krásu.",
-    "service_6": "Extrakce zubů moudrosti",
-    "service_desc_6": "Zbavíme vás problémových zubů moudrosti rychle a bezpečně.",
-    "service_7": "Implantologie",
-    "service_desc_7": "Chybějící zuby? Nabízíme moderní a spolehlivé řešení pomocí implantátů.",
-    "service_8": "Parodontologie",
-    "service_desc_8": "Pomůžeme vám s léčbou zánětů dásní a podpoříme zdraví vašeho parodontu.",
-    "service_9": "Endodoncie",
-    "service_desc_9": "Zachraňujeme zuby před extrakcí pečlivým ošetřením kořenových kanálků.",
-    "service_10": "Ortodoncie",
-    "service_desc_10": "Společně dosáhneme rovných zubů pomocí moderních ortodontických metod.",
-    "service_11": "Analgosedace a celková anestezie",
-    "service_desc_11": "Ošetření zcela bez bolesti pro váš maximální komfort.",
-    "service_12": "Dětská stomatologie",
-    "service_desc_12": "Šetrná péče o dětské zoubky s důrazem na prevenci a pozitivní přístup.",
-    "service_13": "Nastřižení uzdiček v ústech kojenců",
-    "service_desc_13": "Rychlý a šetrný zákrok pro pohodlnější kojení a správnou pohyblivost jazyka.",
-    "service_14": "Bělení zubů",
-    "service_desc_14": "Zářivý úsměv je na dosah – vybělení zubů bezpečně a efektivně.",
-    "service_15": "Zubní laboratoř",
-    "service_desc_15": "V naší vlastní laboratoři se postaráme o rychlou a kvalitní výrobu protetiky.",
+	"service_1": "Stomatologie",
+	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
+	"service_2": "Prevence",
+	"service_desc_2": "Pravidelné kontroly, díky kterým udržíme váš chrup v perfektní kondici.",
+	"service_3": "Dentální hygiena",
+	"service_desc_3": "Profesionální čištění zubů, které vám pomůže předejít kazům a zánětům.",
+	"service_4": "Stomatochirurgie",
+	"service_desc_4": "Šetrné chirurgické zákroky, které zvládnete bez obav a bolesti.",
+	"service_5": "Kompletní rekonstrukce chrupu",
+	"service_desc_5": "Navrátíme vašemu úsměvu plnou funkci i krásu.",
+	"service_6": "Extrakce zubů moudrosti",
+	"service_desc_6": "Zbavíme vás problémových zubů moudrosti rychle a bezpečně.",
+	"service_7": "Implantologie",
+	"service_desc_7": "Chybějící zuby? Nabízíme moderní a spolehlivé řešení pomocí implantátů.",
+	"service_8": "Parodontologie",
+	"service_desc_8": "Pomůžeme vám s léčbou zánětů dásní a podpoříme zdraví vašeho parodontu.",
+	"service_9": "Endodoncie",
+	"service_desc_9": "Zachraňujeme zuby před extrakcí pečlivým ošetřením kořenových kanálků.",
+	"service_10": "Ortodoncie",
+	"service_desc_10": "Společně dosáhneme rovných zubů pomocí moderních ortodontických metod.",
+	"service_11": "Analgosedace a celková anestezie",
+	"service_desc_11": "Ošetření zcela bez bolesti pro váš maximální komfort.",
+	"service_12": "Dětská stomatologie",
+	"service_desc_12": "Šetrná péče o dětské zoubky s důrazem na prevenci a pozitivní přístup.",
+	"service_13": "Nastřižení uzdiček v ústech kojenců",
+	"service_desc_13": "Rychlý a šetrný zákrok pro pohodlnější kojení a správnou pohyblivost jazyka.",
+	"service_14": "Bělení zubů",
+	"service_desc_14": "Zářivý úsměv je na dosah – vybělení zubů bezpečně a efektivně.",
+	"service_15": "Zubní laboratoř",
+	"service_desc_15": "V naší vlastní laboratoři se postaráme o rychlou a kvalitní výrobu protetiky.",
 
-    "home": {
-        "title": "Ми дбаємо про вашу усмішку",
-        "secondary_title": "Зубна клініка в місті Колін",
-        "services_btn": "Наші сервіси",
-        "services_search_placeholder": "Яку послугу ви шукаєте?",
-        "services_no_result_pop_up": "Послуг не знайдено, спробуйте пошукати іншу послугу!",
-        "question_1": "Питання",
-        "answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
-        "question_2": "Питання",
-        "answer_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
-        "question_3": "Питання",
-        "answer_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!"
-    },
+	"home": {
+		"title": "Ми дбаємо про вашу усмішку",
+		"secondary_title": "Зубна клініка в місті Колін",
+		"services_btn": "Наші сервіси",
+		"services_search_placeholder": "Яку послугу ви шукаєте?",
+		"services_no_result_pop_up": "Послуг не знайдено, спробуйте пошукати іншу послугу!",
+		"question_1": "Питання",
+		"answer_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
+		"question_2": "Питання",
+		"answer_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!",
+		"question_3": "Питання",
+		"answer_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!"
+	},
 
-    "price_data": {
-        "all_title": "Всі сервіси",
-        "braces_title": "Брекети",
-        "dentistry_title": "Стоматологія"
-    },
+	"price_data": {
+		"all_title": "Всі сервіси",
+		"braces_title": "Брекети",
+		"dentistry_title": "Стоматологія"
+	},
 
-    "braces": {
-        "name_1": "Брекети 15 хв",
-        "price_1": "1250 Чешських крон"
-    },
+	"braces": {
+		"name_1": "Брекети 15 хв",
+		"price_1": "1250 Чешських крон"
+	},
 
-    "dentistry": {
-        "name_1": "Стоматологія 15 хв",
-        "price_1": "3250 Чешських крон"
-    },
+	"dentistry": {
+		"name_1": "Стоматологія 15 хв",
+		"price_1": "3250 Чешських крон"
+	},
 
-    "smile_gallery": {
-        "before": "До",
-        "after": "Після"
-    },
+	"smile_gallery": {
+		"before": "До",
+		"after": "Після"
+	},
 
-    "contacts": {
-        "details_title": "У вас є запитання або ви бажаєте записатися на прийом? Ми тут, щоб допомогти. Зв'яжіться з нами через форму, телефон або електронну пошту, і ми будемо раді вам допомогти.",
-        "phone": "Номер телефону",
-        "mail": "Електронна пошта",
-        "address": "Адреса",
-        "address_btn_title": "Відвідайте нас в Google картах",
-        "first_name": "Ім'я",
-        "last_name": "Прізвище",
-        "choose_service": "Виберіть сервіс",
-        "submit_btn_title": "Відправити"
-    },
+	"contacts": {
+		"details_title": "У вас є запитання або ви бажаєте записатися на прийом? Ми тут, щоб допомогти. Зв'яжіться з нами через форму, телефон або електронну пошту, і ми будемо раді вам допомогти.",
+		"phone": "Номер телефону",
+		"mail": "Електронна пошта",
+		"address": "Адреса",
+		"address_btn_title": "Відвідайте нас в Google картах",
+		"first_name": "Ім'я",
+		"last_name": "Прізвище",
+		"choose_service": "Виберіть сервіс",
+		"submit_btn_title": "Відправити"
+	},
 
-    "footer": {
-        "working_hours": "Робочі години",
-        "mon": "Понеділок",
-        "tue": "Вівторок",
-        "wed": "Середа",
-        "thu": "Четверг",
-        "fri": "Пятниця",
-        "sat": "Субота",
-        "sun": "Неділя",
-        "closed": "Закрито",
-        "nav_title": "Навігація",
-        "rights": "Всі права захищено"
-    }
+	"footer": {
+		"working_hours": "Робочі години",
+		"mon": "Понеділок",
+		"tue": "Вівторок",
+		"wed": "Середа",
+		"thu": "Четверг",
+		"fri": "Пятниця",
+		"sat": "Субота",
+		"sun": "Неділя",
+		"closed": "Закрито",
+		"nav_title": "Навігація",
+		"rights": "Всі права захищено",
+		"website_created_by": "Сайт створений"
+	}
 }
