Update menu-btn in Header

--- a/src/assets/translations/cs/translation.json
+++ b/src/assets/translations/cs/translation.json
@@ -9,6 +9,8 @@
 	"appointment_title": "Rezervujte si termín",
 	"faq_title": "Často kladené otázky",
 	"coming_soon": "Již brzy",
+	"openMenu": "Otevřít menu",
+	"closeMenu": "Zavřít menu",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
