--- a/src/assets/translations/en/translation.json
+++ b/src/assets/translations/en/translation.json
@@ -9,6 +9,8 @@
 	"appointment_title": "Book an appointment",
 	"faq_title": "FAQ",
 	"coming_soon": "Coming soon",
+	"openMenu": "Open menu",
+	"closeMenu": "Close menu",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
