--- a/src/assets/translations/uk/translation.json
+++ b/src/assets/translations/uk/translation.json
@@ -9,6 +9,8 @@
 	"appointment_title": "Записатись на прийом",
 	"faq_title": "Питання та відповіді",
 	"coming_soon": "Незабаром",
+	"openMenu": "Відкрити меню",
+	"closeMenu": "Закрити меню",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
