Update ToTopBtn component

--- a/src/assets/translations/en/translation.json
+++ b/src/assets/translations/en/translation.json
@@ -11,6 +11,7 @@
 	"coming_soon": "Coming soon",
 	"openMenu": "Open menu",
 	"closeMenu": "Close menu",
+	"scrollToTop": "Scroll to top",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
