--- a/src/assets/translations/uk/translation.json
+++ b/src/assets/translations/uk/translation.json
@@ -11,6 +11,7 @@
 	"coming_soon": "Незабаром",
 	"openMenu": "Відкрити меню",
 	"closeMenu": "Закрити меню",
+	"scrollToTop": "Прокрутити нагору",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
