--- a/src/assets/translations/cs/translation.json
+++ b/src/assets/translations/cs/translation.json
@@ -11,6 +11,7 @@
 	"coming_soon": "Již brzy",
 	"openMenu": "Otevřít menu",
 	"closeMenu": "Zavřít menu",
+	"scrollToTop": "Posunout nahoru",
 
 	"service_1": "Stomatologie",
 	"service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
